--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Assignment</string>
 
+    <string name="text_title">Enter Card Details</string>
+
     <string name="textinputedittext_name">Enter Name on Card</string>
     <string name="textinputedittext_card_number">Enter Card Number</string>
     <string name="textinputedittext_cvv">CVV</string>
